Fixed Buttons Not Centered On Mobile

--- a/src/css/master.scss
+++ b/src/css/master.scss
@@ -132,6 +132,8 @@ nav {
 }
 
 .description {
+  display: flex;
+  flex-direction: column;
   align-items: center;
   text-align: center;
   justify-content: center;
